<resources>
    <string name="app_name">微信</string>
    <string name="language">语言</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="selectLanguage">多语言</string>
    <string name="save_select_language">保存</string>
    <string name="use_phone_login">手机号登录</string>
    <string name="other_ways_login">微信号/QQ/邮箱登录</string>
    <string name="phone">手机号</string>
    <string name="input_phone_number">填写手机号</string>
    <string name="please_input_phone_number">请填写手机号</string>
    <string name="country_or_area">国家/地区</string>
    <string name="account">账号</string>
    <string name="security_center">微信安全中心</string>
    <string name="emergency_freezing">紧急冻结</string>
    <string name="get_back_password">找回密码</string>
    <string name="nick_name">昵称</string>
    <string name="input_password">填写密码</string>
    <string name="password">密码</string>
    <string name="use_wechat_id_or_qq_or_email_login">用微信号/QQ号/邮箱登录</string>

    <string name="action_bar_search">搜索</string>
    <string name="action_bar_new_group_chat">发起群聊</string>
    <string name="action_bar_add_new_friend">添加朋友</string>
    <string name="action_bar_scan">扫一扫</string>
    <string name="help_or_feedback">帮助与反馈</string>
    <string name="action_bar_pay">收付款</string>
    <string name="found">发现</string>
    <string name="me">我</string>
    <string name="wechat">微信</string>
    <string name="address_list">通讯录</string>
    <string name="wallet">钱包</string>
    <string name="circle_of_friends">朋友圈</string>
    <string name="mini_program">小程序</string>
    <string name="games">游戏</string>
    <string name="shopping">购物</string>
    <string name="drift_bottle">漂流瓶</string>
    <string name="people_nearby">附近的人</string>
    <string name="search_search">搜一搜</string>
    <string name="look">看一看</string>
    <string name="scan">扫一扫</string>
    <string name="collection">收藏</string>
    <string name="album">相册</string>
    <string name="card_holder">卡包</string>
    <string name="emoji">表情</string>
    <string name="setting">设置</string>
    <string name="send_message">发送</string>
    <string name="press_to_say">按住说话</string>
    <string name="shoot">拍摄</string>
    <string name="video_chatting">视频通话</string>
    <string name="red_packet">红包</string>
    <string name="transfer_accounts">转账</string>
    <string name="voice_input">语音输入</string>
    <string name="business_card">名片</string>
    <string name="my_collection">我的收藏</string>
    <string name="files">文件</string>
    <string name="remark_name">备注名</string>
    <string name="set_remark_and_tag">设置备注和标签</string>
    <string name="area">地区</string>
    <string name="personal_album">个人相册</string>
    <string name="friend_more_info">更多</string>
    <string name="please_waiting">请稍候...</string>
    <string name="please_input_weixin_password">请填写微信密码</string>
    <string name="use_short_message_identifying_code_login">用短信验证码登录</string>
    <string name="add_friend">添加朋友</string>
    <string name="add_to_address_list">添加到通讯录</string>
    <string name="search">搜索</string>
    <string name="verification_application">验证申请</string>
    <string name="you_need_send_verification_application_and_wait_other_side_agree">你需要发送验证申请，等对方通过</string>
    <string name="set_friend_moment_authority">设置朋友圈权限</string>
</resources>
