<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ll_base_root_style"
    android:background="@color/colorWhite"
    tools:context="com.fucaijin.weixin_fucaijin.activity.LoginActivity">

    <!--顶部状态栏的关闭页面按钮-->
    <ImageView
        android:id="@+id/login_iv_finish"
        style="@style/iv_top_bar_close"
        android:padding="5dp"
        android:src="@drawable/top_bar_close_bt"/>

    <!--手机号登录页面-->
    <LinearLayout
        android:id="@+id/login_ll_use_phone_ui"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <!--使用手机登录的标题-->
        <TextView
            android:text="@string/use_phone_login"
            style="@style/text_login_title" />

        <!--选择国家/地区条目，内含下划线-->
        <RelativeLayout
            android:id="@+id/login_rl_select_country"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:layout_marginTop="33dp"
            android:background="@drawable/item_sl_bg"
            android:clickable="true">

            <TextView
                android:id="@+id/tv_country"
                android:text="@string/country_or_area"
                android:textColor="@color/colorBlack"
                android:layout_centerVertical="true"
                style="@style/edit_text_left_text"
                android:layout_marginStart="9dp"/>

            <TextView
                style="@style/w_h_double_wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tv_country"
                android:text="中国（+86）"
                android:textColor="@color/colorTextGreen"
                android:textSize="16sp" />

            <!--下划线-->
            <ImageView
                android:layout_alignParentBottom="true"
                style="@style/h_line_light_gray"
                android:layout_height="1px"/>
        </RelativeLayout>

        <!--手机号输入框根布局-->
        <LinearLayout
            style="@style/ll_edit_text_root">

            <TextView
                android:id="@+id/tv_phone"
                android:text="@string/phone"
                style="@style/edit_text_left_text"/>

            <!--手机号输入框-->
            <EditText
                android:id="@+id/login_et_phone"
                android:hint="@string/please_input_phone_number"
                style="@style/edit_text_style"
                android:inputType="phone"
                android:maxLength="11"/>

            <!--清除手机号输入框的按钮-->
            <ImageView
                android:id="@+id/login_iv_clean_phone_number"
                style="@style/edit_text_clear_bt_style"/>

        </LinearLayout>

        <!--手机号输入框下方的下划线-->
        <ImageView
            style="@style/h_line_light_gray"
            android:background="@color/colorLineGreen" />

        <!--点击切换登录方式（手机/账号 登录）的文字-->
        <TextView
            android:id="@+id/login_tv_others_way_login"
            android:text="@string/use_wechat_id_or_qq_or_email_login"
            android:layout_marginStart="9dp"
            android:layout_marginBottom="39dp"
            android:layout_marginTop="23dp"
            style="@style/text_blue_can_clickable"/>

        <!--下一步按钮-->
        <Button
            android:id="@+id/login_bt_next_step"
            android:text="下一步"
            style="@style/bt_green_can_enable"/>

    </LinearLayout>

    <!--微信/QQ/邮箱登录页面-->
    <LinearLayout
        android:id="@+id/login_ll_use_other_way_ui"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:visibility="gone">

        <!--使用账号登录方式的标题-->
        <TextView
            android:text="@string/other_ways_login"
            style="@style/text_login_title"/>

        <!--账号输入框根布局，内含文字、输入框、清除输入框的按钮-->
        <LinearLayout
            android:layout_marginTop="33dp"
            style="@style/ll_edit_text_root">

            <TextView
                android:id="@+id/tv_account"
                android:text="@string/account"
                style="@style/edit_text_left_text"/>

            <!--账号输入框-->
            <EditText
                android:id="@+id/login_et_account"
                android:hint="请填写微信号/QQ号/邮箱"
                style="@style/edit_text_style"/>

            <!--清除账号输入框按钮-->
            <ImageView
                android:id="@+id/login_iv_clean_account"
                style="@style/edit_text_clear_bt_style"/>

        </LinearLayout>

        <!--账号输入框下方下划线/分割线-->
        <ImageView
            android:id="@+id/login_iv_account_editor_divider"
            style="@style/h_line_light_gray"/>

        <!--密码输入框根布局，内含文字、输入框、清除输入框的按钮-->
        <LinearLayout
            style="@style/ll_edit_text_root">

            <TextView
                android:id="@+id/tv_password"
                android:text="密码"
                style="@style/edit_text_left_text"/>

            <EditText
                android:id="@+id/login_et_password"
                android:hint="请填写密码"
                style="@style/edit_text_style"
                android:inputType="textPassword" />

            <ImageView
                android:id="@+id/login_iv_clean_password"
                style="@style/edit_text_clear_bt_style"/>
        </LinearLayout>

        <!--密码输入框下方下划线/分割线-->
        <ImageView
            android:id="@+id/login_iv_password_editor_divider"
            style="@style/h_line_light_gray"/>

        <!--切换登录方式的可点击的文字-->
        <TextView
            android:id="@+id/login_tv_phone"
            android:text="用手机号登录"
            android:layout_marginBottom="39dp"
            android:layout_marginTop="23dp"
            android:paddingStart="9dp"
            style="@style/text_blue_can_clickable"/>

        <!--登录按钮-->
        <Button
            android:id="@+id/login_bt_login"
            android:text="@string/login"
            style="@style/bt_green_can_enable"/>

    </LinearLayout>

    <!--底部的：找回密码|紧急冻结|微信安全中心-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:orientation="horizontal">

        <!--找回密码-->
        <TextView
            android:id="@+id/login_tv_get_back_password"
            android:text="@string/get_back_password"
            style="@style/text_blue_small_can_clickable"/>

        <ImageView
            style="@style/light_gray_vertical_divider"/>

        <!--紧急冻结-->
        <TextView
            android:id="@+id/login_tv_emergency_freezing"
            android:text="@string/emergency_freezing"
            style="@style/text_blue_small_can_clickable"/>

        <ImageView
            style="@style/light_gray_vertical_divider"/>

        <!--微信安全中心-->
        <TextView
            android:id="@+id/login_tv_security_center"
            android:text="@string/security_center"
            style="@style/text_blue_small_can_clickable"/>

    </LinearLayout>

</LinearLayout>
