<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/w_h_double_match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--朋友圈-->
            <RelativeLayout
                android:id="@+id/home_found_frag_lv_item_circle_of_friends"
                style="@style/home_list_view_style"
                android:layout_marginTop="20dp">

                <ImageView
                    android:src="@drawable/found_frag_circle_of_friends"
                    style="@style/home_found_fragment_item_iv" />

                <TextView
                    android:text="@string/circle_of_friends"
                    style="@style/home_found_fragment_item_tv" />

                <ImageView
                    style="@style/home_found_fragment_item_iv"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/head_sculpture_9"
                    android:layout_marginEnd="18dp"/>

                <!--分割线-->
                <ImageView
                    style="@style/home_list_view_divider_style"/>
            </RelativeLayout>

            <!--扫一扫-->
            <RelativeLayout
                android:id="@+id/home_found_frag_lv_item_scan"
                style="@style/home_list_view_style"
                android:layout_marginTop="20dp">

                <ImageView
                    android:src="@drawable/found_frag_scan"
                    style="@style/home_found_fragment_item_iv" />

                <TextView
                    android:text="@string/scan"
                    style="@style/home_found_fragment_item_tv" />

                <!--分割线-->
                <ImageView
                    style="@style/home_list_view_divider_style"/>
            </RelativeLayout>

            <!--摇一摇-->
            <RelativeLayout
                android:id="@+id/home_found_frag_lv_item_shake"
                style="@style/home_list_view_style">

                <ImageView
                    android:src="@drawable/found_frag_shake"
                    style="@style/home_found_fragment_item_iv" />

                <TextView
                    android:text="摇一摇"
                    style="@style/home_found_fragment_item_tv" />

                <!--分割线-->
                <ImageView
                    style="@style/home_list_view_divider_style"/>
            </RelativeLayout>

            <!--看一看-->
            <RelativeLayout
                android:id="@+id/home_found_frag_lv_item_look"
                style="@style/home_list_view_style"
                android:layout_marginTop="20dp">

                <ImageView
                    android:src="@drawable/found_frag_look"
                    style="@style/home_found_fragment_item_iv" />

                <TextView
                    android:text="看一看"
                    style="@style/home_found_fragment_item_tv" />

                <!--分割线-->
                <ImageView
                    style="@style/home_list_view_divider_style"/>
            </RelativeLayout>

            <!--搜一搜-->
            <RelativeLayout
                android:id="@+id/home_found_frag_lv_item_search"
                style="@style/home_list_view_style">

                <ImageView
                    android:src="@drawable/found_frag_search"
                    style="@style/home_found_fragment_item_iv" />

                <TextView
                    android:text="@string/search"
                    style="@style/home_found_fragment_item_tv" />

            </RelativeLayout>

            <!--附近的人-->
            <RelativeLayout
                android:id="@+id/home_found_frag_lv_item_people_nearby"
                style="@style/home_list_view_style"
                android:layout_marginTop="20dp">

                <ImageView
                    android:src="@drawable/found_frag_people_nearby"
                    style="@style/home_found_fragment_item_iv" />

                <TextView
                    android:text="@string/people_nearby"
                    style="@style/home_found_fragment_item_tv" />

                <!--分割线-->
                <ImageView
                    style="@style/home_list_view_divider_style"/>
            </RelativeLayout>

            <!--漂流瓶-->
            <RelativeLayout
                android:id="@+id/home_found_frag_lv_item_drift_bottle"
                style="@style/home_list_view_style">

                <ImageView
                    android:src="@drawable/found_frag_drift_bottle"
                    style="@style/home_found_fragment_item_iv" />

                <TextView
                    android:text="@string/drift_bottle"
                    style="@style/home_found_fragment_item_tv" />
            </RelativeLayout>

            <!--购物-->
            <RelativeLayout
                android:id="@+id/home_found_frag_lv_item_shopping"
                style="@style/home_list_view_style"
                android:layout_marginTop="20dp">

                <ImageView
                    android:src="@drawable/found_frag_shoping"
                    style="@style/home_found_fragment_item_iv" />

                <TextView
                    android:text="@string/shopping"
                    style="@style/home_found_fragment_item_tv" />

                <!--分割线-->
                <ImageView
                    style="@style/home_list_view_divider_style"/>
            </RelativeLayout>

            <!--游戏-->
            <RelativeLayout
                android:id="@+id/home_found_frag_lv_item_games"
                style="@style/home_list_view_style">

                <ImageView
                    android:src="@drawable/found_frag_games"
                    style="@style/home_found_fragment_item_iv" />

                <TextView
                    android:text="@string/games"
                    style="@style/home_found_fragment_item_tv" />

            </RelativeLayout>

            <!--小程序-->
            <RelativeLayout
                android:id="@+id/home_found_frag_lv_item_mini_program"
                style="@style/home_list_view_style"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:src="@drawable/found_frag_mini_program"
                    style="@style/home_found_fragment_item_iv" />

                <TextView
                    android:text="@string/mini_program"
                    style="@style/home_found_fragment_item_tv" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>